# XVMem

./: .gitignore  CMakeLists.txt  README.md  XVMem.cpp  XVMem.h  XVMem_platform.h  XVMem_unix.cpp  XVMem_unix.h  XVMem_windows.cpp  XVMem_windows.h
